apps/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  selector:
    matchLabels:
      app: hello
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: hello
        tier: frontend
    spec:
      containers:
      - name: nginx
        image: europe-west1-docker.pkg.dev/cursos-imagina/imagina-registry-prod/gke-frontend-app:a29ebc9
        #image: "gcr.io/google-samples/hello-frontend:1.0"
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        lifecycle:
          preStop:
            exec:
              command: ["/usr/sbin/nginx","-s","quit"]
        ports:
        - name: http
          containerPort: 80
