apps/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: default
spec:
  type: NodePort
  selector:
    app: hello
    tier: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
